changing Observable to Operator

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -9,9 +9,9 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 \subsection{\textbf{ResultsBuffer}}\label{subsec:ResultsBuffer}
 \DATATYPENAME{ResultsBuffer} contains the measurement results from a single quantum execution.\\
 
-\subsection{\textbf{Observable}}\label{subsec:Observable}
+\subsection{\textbf{Operator}}\label{subsec:Operator}
 % description of how to build/initialize observable should be refined. 
-\DATATYPENAME{Observable} is an operator built from PauliOperators and transformed FieldOperators.
+\DATATYPENAME{Operator} is an operator built from Pauli Operators and Field Operators.
 % does this refer to the underlying operator transformations?
 It contains the data to algebraically relate basic and complex operations, 
 % i.e. how we put together the observable from a set of non-commuting measurement bases
