--- a/content/multiplyOperation.tex
+++ b/content/multiplyOperation.tex
@@ -1,30 +1,30 @@
 \apisummary{
-     Takes Observables and retrurns their product. 
+     Takes Operators and retrurns their product. 
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Obervable* multiplyOperation(Observable* op1, Observable* op2, ...)
+    Operator* multiplyOperation(Operator* op1, Operator* op2, ...)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    Obervable* qcor::multiplyOperation(Observable &op1, Observable &op2, ...)
+    Operator* qcor::multiplyOperation(Operator &op1, Operator &op2, ...)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{IN}{op1}{first Observable operand}
-    \apiargument{IN}{op2}{second Observable operand}
-    \apiargument{IN}{...}{additional Observable operands}
+    \apiargument{IN}{op1}{first Operator}
+    \apiargument{IN}{op2}{second Operator}
+    \apiargument{IN}{...}{additional Operators}
 \end{apiarguments}
 
 \apidescription{
-        The \FUNC{multiplyOperation} routine multiplies two or more \DATATYPENAME{Observables}.
+        The \FUNC{multiplyOperation} routine multiplies two or more \DATATYPENAME{Operators}.
 }
 
 \apireturnvalues{
-     Returns new instance of \DATATYPENAME{Observable}.
+     Returns new instance of \DATATYPENAME{Operator}.
 }      
 
 \apinotes{
