changing Observable to Operator

--- a/content/pauliX.tex
+++ b/content/pauliX.tex
@@ -5,11 +5,11 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Observable pauliX(int n)
+    Operator pauliX(int n)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    Observable qcor::pauliX(int n)
+    Operator qcor::pauliX(int n)
 \end{Cppsynopsis}
 
 
@@ -18,11 +18,11 @@
 \end{apiarguments}
 
 \apidescription{
-       \FUNC{pauliX} accepts an integer input that creates a Pauli X operator at site \VAR{n}.  The Pauli X operator is returned as a \DATATYPENAME{Observable}.
+       \FUNC{pauliX} accepts an integer input that creates a Pauli X operator at site \VAR{n}.
 }
 
 \apireturnvalues{
-    Returns a single instance of \DATATYPENAME{Observable}.
+    Returns a single instance of \DATATYPENAME{Operator}.
 }      
 
 \apinotes{
