changing Observable to Operator

--- a/content/pauliY.tex
+++ b/content/pauliY.tex
@@ -5,11 +5,11 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Observable pauliY(int n)
+    Operator pauliY(int n)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    Observable qcor::pauliY(int n)
+    Operator qcor::pauliY(int n)
 \end{Cppsynopsis}
 
 
@@ -18,11 +18,11 @@
 \end{apiarguments}
 
 \apidescription{
-         \FUNC{pauliY} accepts an integer input that creates a Pauli Y operator at site \VAR{n}.  The Pauli Y operator is returned as an \DATATYPENAME{Observable} type.
+         \FUNC{pauliY} accepts an integer input that creates a Pauli Y operator at site \VAR{n}.
 }
 
 \apireturnvalues{
-    Returns a single instance of \DATATYPENAME{Observable}.
+    Returns a single instance of \DATATYPENAME{Operator}.
 }      
 
 \apinotes{
