changing Observable to Operator

--- a/content/pauliZ.tex
+++ b/content/pauliZ.tex
@@ -5,11 +5,11 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    Observable pauliZ(int n)
+    Operator pauliZ(int n)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    Observable qcor::pauliZ(int n)
+    Operator qcor::pauliZ(int n)
 \end{Cppsynopsis}
 
 
@@ -18,11 +18,11 @@
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{pauliZ} accepts an integer input that creates a Pauli Z operator at site \VAR{n}.  The Pauli Z operator is returned as an \DATATYPENAME{Observable} type.
+        \FUNC{pauliZ} accepts an integer input that creates a Pauli Z operator at site \VAR{n}.
 }
 
 \apireturnvalues{
-    Returns a single instance of \DATATYPENAME{Observable}.
+    Returns a single instance of \DATATYPENAME{Operator}.
 }      
 
 \apinotes{
