--- a/content/taskInitiate.tex
+++ b/content/taskInitiate.tex
@@ -5,30 +5,23 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-Handle taskInitiate(Observable *observable, Kernel *kernel, Objective *objective, Optimizer *optimizer)
+Handle taskInitiate(ObjectiveFunction *objective, Optimizer *optimizer)
 %SP 8/4/2020: fix text wrap so it doesn't cut at odd place
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-Handle qcore::taskInitiate(Observable *observable, Kernel *kernel, Objective *objective, Optimizer *optimizer)
+Handle qcore::taskInitiate(ObjectiveFunction &objective, Optimizer &optimizer)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{IN}{observable}{A Hermitian operator to be evaluated. Also provides rule defining the measurement bases to be rotated into after main body of kernel has been executed on the quantum hardware}
-    %SP 8/4/2020: a rule? under datatypes we say it is an operator.  EZJ fixed. 
-    \apiargument{IN}{kernel}{The quantum kernel to be executed as part of the objective function evaluation}
-     % dosn't the ObjectiveFunction already contain the observable and kernels? See datatypes.tex
     \apiargument{IN}{objective}{A parameterized user defined function transforming input data into an output result}
     %SP 8/4/2020: how is this different from objectiveFunction?  the description is basically saying it is an objective function.  This has often confused me. EZJ ditto. 
     \apiargument{IN}{optimizer}{Takes an objective function as input and outputs the optimal function parameters and associated function value}
-    \apiargument{IN}{parameters}{Vector of kernel parameters}
-    \apiargument{OUT}{handle}{}
 \end{apiarguments}
 
 \apidescription{
-The taskInitiate call is invoked on the host to launch a quantum kernel on the quantum device. The taskInitiate call references the observable data structure, the objective function, and the classical optimizer. After a quantum kernel has been launched, host execution continues until the host reaches a sync call.  
-%SP 8/4/2020: again here we are saying it references the objective function, but above the argument is 'objective'  
+The taskInitiate call is invoked on the host to launch a quantum kernel on the quantum device. The taskInitiate call references the objective function, and the classical optimizer. After a quantum kernel has been launched, host execution continues until the host reaches a sync call.  
 }
 
 \apireturnvalues{
