updating memory allocation information

--- a/content/memory_model.tex
+++ b/content/memory_model.tex
@@ -1,5 +1,5 @@
 The \qcor memory model assumes that the host memory and quantum control system memory are discrete memory spaces with explicit and implicit memory accesses between the two memory spaces.  
-All memory access is explicit on the host device -- i.e., there is a library call or directive expressed in the code by the programmer. On the other hand, memory allocation on and data transfer to the quantum device are implicitly managed by the compiler. For example, an explicit allocation of memory for ``quantum results'' also implicitly requires the same memory for "quantum results" to be accessible on the quantum device. In addition, the host must explicitly allocate memory to create instances of objective functions and observables, and these are implicitly allocated as quantum registers to evaluate the observable on the quantum side. 
+All memory access is explicit on the host device -- i.e., there is a library call or directive expressed in the code by the programmer. On the other hand, memory allocation on and data transfer to the quantum device are implicitly managed by the compiler. For example, an explicit allocation of memory for ``qubits'' and ``quantum results'' also implicitly requires corresponding memory for ``qubits'' and ``quantum results'' to be accessible on the quantum device. In addition, the host must explicitly allocate memory to create instances of objective functions and observables, and these are implicitly allocated as quantum registers to evaluate the observable on the quantum side. The size of the memory allocation may not equal accross the host, quantum controller and quantum device.  For example, an explicit allocation of ``qubits'' by the host allocates (N + C)*E bits of memory on the host, N*E bits of memory on the controller and N qubits on the quantum device, where N is the number of qubits, C is the bit size of an integer on a classical system, and E is the number of experiments to be performed on the quantum device.
 
 The discrete memory spaces in the \qcor memory model support shared and distributed memory between the host and quantum system. 
 When the memory spaces are distributed, a copy of the allocated memory exists in both the host and quantum system address spaces.  
