--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -36,5 +36,8 @@ and the measurements from the observation of the kernel execution.\\
 \subsection{\textbf{OperatorTransform}}\label{subsec:OperatorTransform}
 \DATATYPENAME{OperatorTransform} A function mapping an (variatic number of) input Operator(s) to a transformed output (list of) Operator(s). 
 
-\subsection{\textbf{HeterogeneousMap}}\label{subsec:direction}
-\DATATYPENAME{direction} has two attributes a string \VAR{s} and void pointer \VAR{p} for use in \Clang.
+\subsection{\textbf{HeterogeneousMap}}\label{subsec:HeterogeneousMap}
+\DATATYPENAME{HeterogeneousMap} has two attributes a string \VAR{s} and void pointer \VAR{p} for use in \Clang.
+
+\subsection{\textbf{qreg}}\label{subsec:qreg}
+\DATATYPENAME{qreg} is the datatype representation for qubits.
