--- a/content/setnumexp.tex
+++ b/content/setnumexp.tex
@@ -1,28 +1,28 @@
 \apisummary{
-    
+    Sets the number of quantum experiments to be executed.
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    
+    void set_num_experiments(int e)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    
+    void qcor::set_num_experiments(int e)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{}{}{}
+    \apiargument{IN}{e}{number of experiments}
 \end{apiarguments}
 
 \apidescription{
-        
+        \FUNC{set_num_experiments) takes an integer number of experiments, \VAR{e} and sets the runtime environment to execute e number of experiments for subsequent quantum kernel executions.
 }
 
 \apireturnvalues{
-    
+    None.
 }      
 
 \apinotes{
