adding description for get_num_experiments.

--- a/content/getnumexp.tex
+++ b/content/getnumexp.tex
@@ -1,15 +1,15 @@
 \apisummary{
-    
+    Runtime query for the number of experiments.
 }
 
 \begin{apidefinition}
 
 \begin{Csynopsis}
-    
+    int get_num_experiments()
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-    
+    int qcor::get_num_experiments()
 \end{Cppsynopsis}
 
 
@@ -18,11 +18,11 @@
 \end{apiarguments}
 
 \apidescription{
-        
+        \FUNC{get_num_experiments} queries the runtime environment for the number of times a quantum kernel will be executed.
 }
 
 \apireturnvalues{
-    
+    Returns the number of experiments.
 }      
 
 \apinotes{
