updating description of objective parameter

--- a/content/taskInitiate.tex
+++ b/content/taskInitiate.tex
@@ -15,7 +15,7 @@ Handle qcore::taskInitiate(ObjectiveFunction &objective, Optimizer &optimizer)
 
 
 \begin{apiarguments}
-    \apiargument{IN}{objective}{A parameterized user defined function transforming input data into an output result}
+    \apiargument{IN}{objective}{A representation of a parameterized function}
     %SP 8/4/2020: how is this different from objectiveFunction?  the description is basically saying it is an objective function.  This has often confused me. EZJ ditto. 
     \apiargument{IN}{optimizer}{Takes an objective function as input and outputs the optimal function parameters and associated function value}
 \end{apiarguments}
