--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -13,6 +13,9 @@ where x denotes a list of scalar parameters, O denotes an operator, and U(x') de
 \subsection{\textbf{ResultsBuffer}}\label{subsec:ResultsBuffer}
 \DATATYPENAME{ResultsBuffer} contains the measurement results from a single quantum execution.\\
 
+\subsection{\textbf{Handle}}\label{subsec:Handle}
+\DATATYPENAME{Handle} \\
+
 \subsection{\textbf{Operator}}\label{subsec:Operator}
 % description of how to build/initialize observable should be refined. 
 \DATATYPENAME{Operator} is an operator built from Pauli Operators and Field Operators.
