Updating the datatype and api names in description

--- a/content/sync.tex
+++ b/content/sync.tex
@@ -5,16 +5,16 @@
 \begin{apidefinition}
 
 \begin{Csynopsis}
-*Qresult_buf sync(Qhandle qh)
+    ResultsBuffer* sync(Handle qh)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-
+    ResultsBuffer* sync(Handle qh)
 \end{Cppsynopsis}
 
 
 \begin{apiarguments}
-    \apiargument{IN}{qh}{Handle for the quantum kernel launched by the QKernelInitiate call}
+    \apiargument{IN}{qh}{Handle for the quantum kernel launched by the TaskInitiate call}
 \end{apiarguments}
 
 \apidescription{
