minor syntax error

--- a/content/taskInitiate.tex
+++ b/content/taskInitiate.tex
@@ -10,7 +10,7 @@ Handle taskInitiate(ObjectiveFunction *objective, Optimizer *optimizer)
 \end{Csynopsis}
 
 \begin{Cppsynopsis}
-Handle qcore::taskInitiate(ObjectiveFunction &objective, Optimizer &optimizer)
+Handle qcor::taskInitiate(ObjectiveFunction &objective, Optimizer &optimizer)
 \end{Cppsynopsis}
 
 
