modifying return description

--- a/content/sync.tex
+++ b/content/sync.tex
@@ -22,7 +22,7 @@
 }
 
 \apireturnvalues{
-    Result vector output containing the all objective function values
+    Returns an instance of \DATATYPENAME{ResultsBuffer} which contains output of the quantum kernel execution.
 }      
 
 \apinotes{
