--- a/content/qalloc.tex
+++ b/content/qalloc.tex
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{qalloc} allocates memory for qubits on the host, quantum controller and quantum device.  This routines allocates (N + C)*E bits of memory on the host, N*E bits of memory on the controller and N qubits on the quantum device, where N is the number of qubits, C is the bit size of an integer on a classical system, and E is the number of experiments to be performed on the quantum device. The number of experiments can be set at compile time or at runtime using \FUNC{set_num_experiments}.
+        \FUNC{qalloc} allocates memory for measurement results on the host, measurement results on the quantum controller, and qubits on the quantum device.  This routines allocates (N + C)*E bits of memory on the host, N*E bits of memory on the controller and N qubits on the quantum device, where N is the number of qubits, C is the bit size of an integer on a classical system, and E is the number of experiments to be performed on the quantum device. 
 }
 
 \apireturnvalues{
@@ -26,7 +26,7 @@
 }      
 
 \apinotes{
-    
+    The number of experiments can be set at compile time or at runtime using \FUNC{set_num_experiments}.
 }
 
 \end{apidefinition}
