adding escape character for _ in site_idx

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -34,7 +34,7 @@ and the measurements from the observation of the kernel execution.\\
 
 \subsection{\textbf{SiteMap}}\label{subsec:Sitemap}
 % is this a mapping between a coodinate system (given a dimensionality) and indicies for the lattice sites? 
-\DATATYPENAME{SiteMap} has an integer, \VAR{site_idx}, and string, \VAR{axis}, attribute. These attributes form a mapping of \VAR{site_idx} to \VAR{axis} for use in \Clang.
+\DATATYPENAME{SiteMap} has an integer, \VAR{site\_idx}, and string, \VAR{axis}, attribute. These attributes form a mapping of \VAR{site\_idx} to \VAR{axis} for use in \Clang.
 
 \subsection{\textbf{OperatorTransform}}\label{subsec:OperatorTransform}
 \DATATYPENAME{OperatorTransform} A function mapping an (variatic number of) input Operator(s) to a transformed output (list of) Operator(s). 
