--- a/content/execute.tex
+++ b/content/execute.tex
@@ -14,11 +14,11 @@
 
 
 \begin{apiarguments}
-    \apiargument{IN}{hdl}{Handle created from the initial taskInitiate call.}
+    \apiargument{IN}{hdl}{Handle from a previously initiated quantum classical task.}
 \end{apiarguments}
 
 \apidescription{
-    This re-executes the quantum kernel associated from a previous taskInitiate and sync which have already been called. Requires a subsequent sync call to retrieve results of re-execution.  
+    This re-executes the quantum-classical task associated with the \VAR{hdl}.   
     %SP 8/4/2020: I'm confused by this descption.  
     % 'the quantum kernel associated' - with what?
     % why re-execute?
@@ -26,11 +26,11 @@
 }
 
 \apireturnvalues{
-    
+    None
 }      
 
 \apinotes{
-    
+    Requires a subsequent sync call to retrieve results.
 }
 
 \end{apidefinition}
