removing createresbuf subsection and changing createObservable to createOperator

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -59,10 +59,7 @@
 
 
 \subsection{Memory Management Routines}
-\subsubsection{\textbf{createResultsBuffer}}\label{subsec:createresbuf}
-\input{content/createresbuf}
-
-\subsubsection{\textbf{createObservable}}\label{subsec:createobserv}
+\subsubsection{\textbf{createOperator}}\label{subsec:createobserv}
 \input{content/createobserv}
 
 \subsubsection{\textbf{createPauli}}\label{subsec:createpauli}
