--- a/utils/defs.tex
+++ b/utils/defs.tex
@@ -52,10 +52,9 @@
 \newcommand{\dest}{\textit{dest}}
 
 \begin{acronym}
-\acro{PE}{\emph{Processing Element}}
-\acrodefplural{PE}[PEs]{\emph{Processing Elements}}
-\acro{API}{\emph{Application Programming Interface}}
-\acro{MPI}{\emph{Message Passing Interface}}
+\acro{PE}{Processing Element}
+\acrodefplural{PE}[PEs]{Processing Elements}
+\acro{API}{Application Programming Interface}
 \acro{ORNL}{Oak Ridge National Laboratory}
 \acro{DOE}{Department of Energy}
 \acro{NISQ}{Noisy Intermediate Scale Quantum}
