tried to create better api acronym

--- a/utils/defs.tex
+++ b/utils/defs.tex
@@ -54,7 +54,8 @@
 \begin{acronym}
 \acro{PE}{Processing Element}
 \acrodefplural{PE}[PEs]{Processing Elements}
-\acro{API}{Application Programming Interface}
+\acro{api}{application programming interface}
+\acrodefplural{api}[apis]{application programming interfaces}
 \acro{ORNL}{Oak Ridge National Laboratory}
 \acro{DOE}{Department of Energy}
 \acro{NISQ}{Noisy Intermediate Scale Quantum}
