--- a/utils/defs.tex
+++ b/utils/defs.tex
@@ -52,10 +52,8 @@
 \newcommand{\dest}{\textit{dest}}
 
 \begin{acronym}
-\acro{PE}{Processing Element}
-\acrodefplural{PE}[PEs]{Processing Elements}
-\acro{api}{application programming interface}
-\acrodefplural{api}[apis]{application programming interfaces}
+\acro{API}{\LU{A}{a}pplication \LU{P}{p}rogramming \LU{I}{i}nterface}
+\acrodefplural{API}[APIs]{\LU{A}{a}pplication \LU{P}{p}rogramming \LU{I}{i}nterfaces}
 \acro{ORNL}{Oak Ridge National Laboratory}
 \acro{DOE}{Department of Energy}
 \acro{NISQ}{Noisy Intermediate Scale Quantum}
