modified to simple lowercase api acronym use

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -1,4 +1,4 @@
-The \qcor specification has a set of datatypes that enable the expression of quantum concepts within the \qcor \ac{APIs}.\\
+The \qcor specification has a set of datatypes that enable the expression of quantum concepts within the \qcor \ac{API}s.\\
 
 \subsection{\textbf{ObjectiveFunction}}\label{subsec:ObjectiveFunction}
 \DATATYPENAME{ObjectiveFunction} is a representation of a parameterized function y = f(U(x'),x,O)
