--- a/utils/defs.tex
+++ b/utils/defs.tex
@@ -52,8 +52,7 @@
 \newcommand{\dest}{\textit{dest}}
 
 \begin{acronym}
-\acro{API}{\LU{A}{a}pplication \LU{P}{p}rogramming \LU{I}{i}nterface}
-\acrodefplural{API}[APIs]{\LU{A}{a}pplication \LU{P}{p}rogramming \LU{I}{i}nterfaces}
+\acro{API}{\lowercase{a}pplication \lowercase{p}rogramming \lowercase{i}nterface}
 \acro{ORNL}{Oak Ridge National Laboratory}
 \acro{DOE}{Department of Energy}
 \acro{NISQ}{Noisy Intermediate Scale Quantum}
