correcting operatorTransform section header

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -54,7 +54,7 @@
 \subsection{\textbf{execute}}\label{subsec:execute}
 \input{content/execute}
 
-\subsection{\textbf{transform}}\label{subsec:operatortransform}
+\subsection{\textbf{operatorTransform}}\label{subsec:operatortransform}
 \input{content/operatortransform}
 
 
