adding missing sections

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -59,7 +59,7 @@
 
 
 \subsection{Memory Management Routines}
-\subsubsection{\textbf{createOperator}}\label{subsec:createobserv}
+\subsubsection{\textbf{createOperator}}\label{subsec:createop}
 \input{content/createobserv}
 
 \subsubsection{\textbf{createPauli}}\label{subsec:createpauli}
@@ -77,15 +77,31 @@
 \subsubsection{\textbf{createFieldOp}}\label{subsec:createfieldop}
 \input{content/createFieldOp}
 
+\subsubsection{\textbf{createObjectiveFunction}}\label{subsec:createobjfunc}
+\input{content/createobjfunc}
+
+\subsubsection{\textbf{createOptimizer}}\label{subsec:createoptimizer}
+\input{content/createoptimizer}
+
+\subsubsection{\textbf{qalloc}}\label{subsec:qalloc}
+\input{content/qalloc}
 
 \subsection{Algebraic Routines}
 \subsubsection{\textbf{addOperation}}\label{subsec:addop}
 \input{content/addOperation}
 
+\subsubsection{\textbf{addInPlaceOperation}}\label{subsec:addinplaceop}
+\input{content/addInPlaceOperation}
+
 \subsubsection{\textbf{multiplyOperation}}\label{subsec:mulop}
 \input{content/multiplyOperation}
  
+\subsection{Accessor Routines}
+\subsubsection{\textbf{get\_num\_experiments}}\label{subsec:getnumexp}
+\input{content/getnumexp}
 
+\subsubsection{\textbf{set\_num\_experiments}}\label{subsec:setnumexp}
+\input{content/setnumexp}
 
 \clearpage
 
